Fixed a visual bug where the righthand of a task would be cut off

--- a/css/mainContent/taskHolder.css
+++ b/css/mainContent/taskHolder.css
@@ -85,7 +85,6 @@
 		margin-left: 2px;
 		
 		max-height: 100%;
-		overflow: hidden;
 		transition: max-height .3s, opacity .3s;
 	}
 	
